--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,9 @@
     </head>
     <body>
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!-- header -->
+
+        <nav class="navbar navbar-dark bg-dark">
             <a class="navbar-brand" href="#"> E-money </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,88 +30,112 @@
                     <li class="nav-item">
 
                         <!--Login MOdel -->
-
-                        <button type="button" class="btn btn-link" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo"> Login </button>
-
-                        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="exampleModalLabel"> Login </h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <form>
-                                            <div class="form-group">
-                                                <label for="inputEmail">Email</label>
-                                                <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="inputPassword">Password</label>
-                                                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="form-check-label"><input type="checkbox"> Remember me</label>
-                                            </div>
-                                            <button type="submit" class="btn btn-primary">Sign in</button>
-                                        </form>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary"> Register </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <button type="button" class="btn btn-link" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo"> Login </button> 
 
                         <!-- Registration Model -->
-
                         <button type="button" class="btn btn-link" data-toggle="modal" data-target="#registerModel" data-whatever="@mdo"> Register </button>
 
-                        <div class="modal fade" id="registerModel" tabindex="-1" role="dialog" aria-labelledby="registerModelLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="registerModalLabel"> Register </h5>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <form>
-                                            <div class="form-group">
-                                                <label for="inputEmail">Email</label>
-                                                <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-                                            </div>
-                                            <div class="form-group">
-                                                <label for="inputPassword">Password</label>
-                                                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="form-check-label"><input type="checkbox"> Remember me</label>
-                                            </div>
-                                            <button type="submit" class="btn btn-primary">Sign up</button>
-                                        </form>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary"> Login </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </li>
 
                 </ul>
-                
+
                 <form class="form-inline my-2 my-lg-0">
                     <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </div>
-            
+
+        </nav>
+
+        <!-- Mainbody -->
+        <div class="jumbotron jumbotron-fluid text-center">
+            <div class="container">
+                <h1 class="display-4"> E-money, Lets get started!</h1>
+                <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+                <hr class="my-4">
+                    <p> If you are registered please Login, otherwise feel free to to Register to get started.</p>
+                    <p class="lead">
+                        <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo"> Login </button> 
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#registerModel" data-whatever="@mdo"> Register </button>
+                    </p>          
+            </div>
+        </div>
+
+
+        <!-- Model Body for Login and Registration -->
+
+        <!-- Login -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel"> Login </h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="id"> Id Number </label>
+                                <input type="text" class="form-control" id="id" placeholder="id number">
+                            </div>
+                            <div class="form-group">
+                                <label for="inputPassword">Password</label>
+                                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                            </div>
+                            <div class="form-group">
+                                <label class="form-check-label"><input type="checkbox"> Remember me</label>
+                            </div>
+                            <a class="btn btn-primary" th:href="@{/agentHome}">Sign in</a>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#registerModel" data-dismiss="modal" data-whatever="@mdo"> Register </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Registration -->
+        <div class="modal fade" id="registerModel" tabindex="-1" role="dialog" aria-labelledby="registerModelLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="registerModalLabel"> Register </h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="form-group">
+                                <label for="inputEmail">Email</label>
+                                <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                            </div>
+                            <div class="form-group">
+                                <label for="inputPassword">Password</label>
+                                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                            </div>
+                            <div class="form-group">
+                                <label class="form-check-label"><input type="checkbox"> Remember me</label>
+                            </div>
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo" data-dismiss="modal"> Sign up </button>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo" data-dismiss="modal"> Login </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Footer -->
+
+        <nav class="navbar fixed-bottom navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Fixed bottom</a>
         </nav>
 
     </body>
