--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -12,8 +12,10 @@
     <body>
 
         <!-- Header Fragment -->
-        <nav class="navbar navbar-dark bg-dark" th:fragment="header">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="header">
             <a class="navbar-brand" th:href="@{/agentHome}"> E-money </a>
+
+            <a th:href="@{/}" class="btn btn-secondary"> Logout </a>
         </nav>
 
         <!-- User registration model -->
