--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -77,43 +77,55 @@
                         </button>
                     </div>
                     <div class="modal-body">
-                        <h5 class="text-center"><u> Savings Account </u></h5>
 
-                        <div class="form-group row" style="margin: 20px">
-                            <label for="inputSavingBalance" class="col col-form-label"> Saving Balance: </label>
-                            <div class="col">
-                                <input type="savingBalance" class="form-control" id="inputsavingBalance" value="0" readonly>
+                        <div style="margin: 30px;">
+                            <h5 class="text-center"><u> Savings Account </u></h5>
+
+                            <div class="form-group row" style="margin: 20px">
+                                <label for="inputSavingBalance" class="col col-form-label"> Saving Balance: </label>
+                                <div class="col">
+                                    <input type="savingBalance" class="form-control" id="inputsavingBalance" value="0" readonly>
+                                </div>
+                            </div>
+
+                            <div class="text-right"> 
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" > Save </button>
+                            </div>
+
+                            <div>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#savingTransactionModal" > Saving Transaction </button>
                             </div>
                         </div>
 
-                        <div class="text-right"> 
-                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" > Save </button>
-                        </div>
-                        <h5 class="text-center"><u> Loan Account </u></h5>
+                        <div style="margin: 30px;">
+                            <h5 class="text-center"><u> Loan Account </u></h5>
 
-                        <div class="form-group row" style="margin: 20px">
-                            <label for="inputLoanAmount" class="col col-form-label"> Loan Amount: </label>
-                            <div class="col">
-                                <input type="loanAmount" class="form-control" id="inputLoanAmount" value="0" readonly>
+                            <div class="form-group row" style="margin: 20px">
+                                <label for="inputLoanAmount" class="col col-form-label"> Loan Amount: </label>
+                                <div class="col">
+                                    <input type="loanAmount" class="form-control" id="inputLoanAmount" value="0" readonly>
+                                </div>
+                            </div>
+                            <div class="form-group row" style="margin: 20px">
+                                <label for="inputInterest" class="col col-form-label"> Loan Interest: </label>
+                                <div class="col">
+                                    <input type="interest" class="form-control" id="inputLoanInterest" value="10%" readonly>
+                                </div>
+                            </div>
+                            <div class="form-group row" style="margin: 20px">
+                                <label for="inputPassword" class="col col-form-label"> Loan Balance: </label>
+                                <div class="col">
+                                    <input type="loanBalance" class="form-control" id="inputLoanBalance" value="0" readonly>
+                                </div>
+                            </div>
+
+                            <div class="text-right">
+                                <button type="button" class="btn btn-primary"> Pay Loan </button>
+                            </div>
+                            <div>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loanTransactionModal" > Saving Transaction </button>
                             </div>
                         </div>
-                        <div class="form-group row" style="margin: 20px">
-                            <label for="inputInterest" class="col col-form-label"> Loan Interest: </label>
-                            <div class="col">
-                                <input type="interest" class="form-control" id="inputLoanInterest" value="10%" readonly>
-                            </div>
-                        </div>
-                        <div class="form-group row" style="margin: 20px">
-                            <label for="inputPassword" class="col col-form-label"> Loan Balance: </label>
-                            <div class="col">
-                                <input type="loanBalance" class="form-control" id="inputLoanBalance" value="0" readonly>
-                            </div>
-                        </div>
-
-                        <div class="text-right">
-                            <button type="button" class="btn btn-primary"> Pay Loan </button>
-                        </div>       
-
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -145,6 +157,116 @@
 
                                     </form>
 
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Saving Transaction Model -->
+                    <div class="modal fade" id="savingTransactionModal" tabindex="-1" role="dialog" aria-labelledby="savingTransactionModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="savingTransactionModalLabel"> Saving Transaction Logs </h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <table class="table">
+                                        <thead class="thead-dark">
+                                            <tr>
+                                                <th scope="col"> Time </th>
+                                                <th scope="col"> Date </th>
+                                                <th scope="col"> Amount </th>
+                                                <th scope="col"> Reason </th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <th scope="row">1</th>
+                                                <td>Mark</td>
+                                                <td>Otto</td>
+                                                <td>@mdo</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">2</th>
+                                                <td>Jacob</td>
+                                                <td>Thornton</td>
+                                                <td>@fat</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">3</th>
+                                                <td>Larry</td>
+                                                <td>the Bird</td>
+                                                <td>@twitter</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row"></th>
+                                                <td> <b> Total Amount </b> </td>
+                                                <td>  </td>
+                                                <td></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Loan Transaction Model -->
+                    <div class="modal fade" id="loanTransactionModal" tabindex="-1" role="dialog" aria-labelledby="loanTransactionModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="loanTransactionModalLabel"> Loan Transaction Logs </h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <table class="table">
+                                        <thead class="thead-dark">
+                                            <tr>
+                                                <th scope="col"> Time </th>
+                                                <th scope="col"> Date </th>
+                                                <th scope="col"> Amount </th>
+                                                <th scope="col"> Reason </th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <th scope="row">1</th>
+                                                <td>Mark</td>
+                                                <td>Otto</td>
+                                                <td>@mdo</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">2</th>
+                                                <td>Jacob</td>
+                                                <td>Thornton</td>
+                                                <td>@fat</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">3</th>
+                                                <td>Larry</td>
+                                                <td>the Bird</td>
+                                                <td>@twitter</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row"></th>
+                                                <td> <b> Total Amount </b> </td>
+                                                <td>  </td>
+                                                <td></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
