--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -79,12 +79,12 @@
         </div>
 
         <!-- Login Fragment -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" 
-             aria-labelledby="exampleModalLabel" aria-hidden="true" th:fragment="loginModel">
+        <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" 
+             aria-labelledby="loginModalLabel" aria-hidden="true" th:fragment="loginModel">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel"> Login </h5>
+                        <h5 class="modal-title" id="loginModalLabel"> Login </h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
