adding login and registration pages

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,40 +12,8 @@
     </head>
     <body>
 
-        <!-- header -->
-
-        <nav class="navbar navbar-dark bg-dark">
-            <a class="navbar-brand" th:href="@{/}"> E-money </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#"> Home <span class="sr-only">(current)</span></a>
-                    </li>
-
-                    <li class="nav-item">
-
-                        <!--Login MOdel -->
-                        <button type="button" class="btn btn-link" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo"> Login </button> 
-
-                        <!-- Registration Model -->
-                        <button type="button" class="btn btn-link" data-toggle="modal" data-target="#registerModel" data-whatever="@mdo"> Register </button>
-
-                    </li>
-
-                </ul>
-
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" />
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-
-        </nav>
+       <!-- header -->
+       <nav th:replace="/fragments :: mainHeader"> Main Header </nav>
 
         <!-- Mainbody -->
         <div class="jumbotron jumbotron-fluid text-center">
@@ -55,20 +23,11 @@
                 <hr class="my-4">
                     <p> If you are registered please Login, otherwise feel free to to Register to get started.</p>
                     <p class="lead">
-                        <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo"> Login </button> 
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#registerModel" data-whatever="@mdo"> Register </button>
+                        <a th:href="@{/login}" class="btn btn-primary"> Login </a>
+                        <a th:href="@{/register}" class="btn btn-primary"> Register </a>
                     </p>          
             </div>
         </div>
-
-
-        <!-- Model Body for Login and Registration -->
-
-        <!-- Login -->
-        <div th:replace="/fragments :: loginModel"></div>
-
-        <!-- Registration -->
-        <div th:replace="/fragments :: registerModel"></div>
 
         <!-- Footer -->
 
