--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -11,6 +11,29 @@
     </head>
     <body>
 
+
+        <!-- Main Header -->
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" th:fragment="mainHeader">
+            <a class="navbar-brand" href="#"> E-money </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" th:href="@{/}">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/login}"> Login </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" th:href="@{/register}"> Register </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
         <!-- Header Fragment -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="header">
             <a class="navbar-brand" th:href="@{/agentHome}"> E-money </a>
@@ -18,96 +41,151 @@
             <a th:href="@{/}" class="btn btn-secondary"> Logout </a>
         </nav>
 
-        <!-- User registration model -->
-        <div class="modal fade" id="registerModel" tabindex="-1" role="dialog" 
-             aria-labelledby="registerModelLabel" aria-hidden="true" th:fragment="registerModel">
+        <!-- Saving Model -->
+
+        <div class="modal fade" id="savingModal" tabindex="-1" role="dialog" 
+             aria-labelledby="savingModalLabel" aria-hidden="true" th:fragment="savings">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="registerModalLabel"> Registration </h5>
+                        <h5 class="modal-title" id="savingModalLabel"> Save </h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
+
                         <form>
-                            <div class="form-row">
-                                <div class="form-group col-md-4">
-                                    <label for="inputFirstName"> First Name </label>
-                                    <input type="text" class="form-control" id="inputFirstName" placeholder="First Name">
-                                </div>
-                                <div class="form-group col-md-4">
-                                    <label for="inputSecondName"> Second Name </label>
-                                    <input type="text" class="form-control" id="inputSecondName" placeholder="Second Name">
-                                </div>
-                                <div class="form-group col-md-4">
-                                    <label for="inputThirdName"> Third Name </label>
-                                    <input type="text" class="form-control" id="inputThirdName" placeholder="Third Name">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="inputId"> Id number </label>
-                                <input type="text" class="form-control" id="inputId" placeholder=" Id Number ">
-                            </div>
-                            <label for="inputPhoneNumber"> Phone Number </label>
-                            <div class="form-group input-group mb-3">
-                                <div class="input-group-prepend">
-                                    <span class="input-group-text" id="basic-addon1"> +254 </span>
-                                </div>
-                                <input type="text" class="form-control" id="phoneNumber" placeholder=" Phone Number ">
-                            </div>
-                            <div class="form-row">
-                                <div class="form-group col-md-6">
-                                    <label for="inputPassword"> Password </label>
-                                    <input type="password" class="form-control" id="inputPassword" placeholder=" Password ">
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label for="inputPassword"> Confirm Password </label>
-                                    <input type="password" class="form-control" id="inputPassword" placeholder=" Password ">
+                            <div class="form-group row">
+                                <label for="colFormLabel" class="col-sm-2 col-form-label"> Amount </label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="colFormLabel" value="0">
                                 </div>
                             </div>
 
-                            <button type="submit" class="btn btn-primary">Sign in</button>
+                            <div class="text-right">
+                                <button type="button" class="btn btn-primary"> Save </button>
+                            </div>
+
                         </form>
+
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo" data-dismiss="modal"> Login </button>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- Login Fragment -->
-        <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" 
-             aria-labelledby="loginModalLabel" aria-hidden="true" th:fragment="loginModel">
+        <!-- Loan transaction model -->
+
+        <div class="modal fade" id="loanTransactionModal" tabindex="-1" 
+             role="dialog" aria-labelledby="loanTransactionModalLabel" aria-hidden="true" th:fragment="loanTransaction">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="loginModalLabel"> Login </h5>
+                        <h5 class="modal-title" id="loanTransactionModalLabel"> Loans Transaction Logs </h5>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
-                        <form>
-                            <div class="form-group">
-                                <label for="id"> Id Number </label>
-                                <input type="text" class="form-control" id="id" placeholder="id number">
-                            </div>
-                            <div class="form-group">
-                                <label for="inputPassword">Password</label>
-                                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-                            </div>
-                            <div class="form-group">
-                                <label class="form-check-label"><input type="checkbox"> Remember me</label>
-                            </div>
-                            <a class="btn btn-primary" th:href="@{/agentHome}">Sign in</a>
-                        </form>
+                        <table class="table">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th scope="col"> Time </th>
+                                    <th scope="col"> Date </th>
+                                    <th scope="col"> Amount </th>
+                                    <th scope="col"> Reason </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>@mdo</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>Jacob</td>
+                                    <td>Thornton</td>
+                                    <td>@fat</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td>Larry</td>
+                                    <td>the Bird</td>
+                                    <td>@twitter</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"></th>
+                                    <td> <b> Total Amount </b> </td>
+                                    <td>  </td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#registerModel" data-dismiss="modal" data-whatever="@mdo"> Register </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Saving transaction model -->
+        <div class="modal fade" id="savingTransactionModal" 
+             tabindex="-1" role="dialog" aria-labelledby="savingTransactionModalLabel" aria-hidden="true" th:fragment="savingTransaction">
+            <div class="modal-dialog" role="document"S>
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="savingTransactionModalLabel"> Savings Transaction Logs </h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <table class="table">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th scope="col"> Time </th>
+                                    <th scope="col"> Date </th>
+                                    <th scope="col"> Amount </th>
+                                    <th scope="col"> Reason </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th scope="row">1</th>
+                                    <td>Mark</td>
+                                    <td>Otto</td>
+                                    <td>@mdo</td>
+                                </tr>
+
+                                <tr>
+                                    <th scope="row">2</th>
+                                    <td>Jacob</td>
+                                    <td>Thornton</td>
+                                    <td>@fat</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row">3</th>
+                                    <td>Larry</td>
+                                    <td>the Bird</td>
+                                    <td>@twitter</td>
+                                </tr>
+                                <tr>
+                                    <th scope="row"></th>
+                                    <td> <b> Total Amount </b> </td>
+                                    <td>  </td>
+                                    <td></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     </div>
                 </div>
             </div>
