--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -63,9 +63,6 @@
         <!-- Editing user model -->
         <div th:replace="/fragments :: registerModel"></div>
 
-        <!-- Footer -->
-        <nav th:replace="/fragments :: footer"></nav>
-
         <!-- Account Model -->
         <div class="modal fade" id="accountModal" tabindex="-1" role="dialog" aria-labelledby="accountModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
@@ -89,7 +86,7 @@
                             </div>
 
                             <div class="text-right"> 
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" > Save </button>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#savingModal" data-dismiss="#modalAccount"> Save </button>
                             </div>
 
                             <div>
@@ -123,162 +120,30 @@
                                 <button type="button" class="btn btn-primary"> Pay Loan </button>
                             </div>
                             <div>
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loanTransactionModal" > Saving Transaction </button>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loanTransactionModal" > Loan Transaction </button>
                             </div>
                         </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     </div>
-                
+
 
                     <!-- Saving model -->
-                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabel"> Save </h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-
-                                    <form>
-                                        <div class="form-group row">
-                                            <label for="colFormLabel" class="col-sm-2 col-form-label"> Amount </label>
-                                            <div class="col-sm-10">
-                                                <input type="text" class="form-control" id="colFormLabel" value="0">
-                                            </div>
-                                        </div>
-
-                                        <div class="text-right">
-                                            <button type="button" class="btn btn-primary"> Save </button>
-                                        </div>
-
-                                    </form>
-
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div th:replace="/fragments :: savings"> Saving model </div>
 
                     <!-- Saving Transaction Model -->
-                    <div class="modal fade" id="savingTransactionModal" tabindex="-1" role="dialog" aria-labelledby="savingTransactionModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="savingTransactionModalLabel"> Saving Transaction Logs </h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    <table class="table">
-                                        <thead class="thead-dark">
-                                            <tr>
-                                                <th scope="col"> Time </th>
-                                                <th scope="col"> Date </th>
-                                                <th scope="col"> Amount </th>
-                                                <th scope="col"> Reason </th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <th scope="row">1</th>
-                                                <td>Mark</td>
-                                                <td>Otto</td>
-                                                <td>@mdo</td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row">2</th>
-                                                <td>Jacob</td>
-                                                <td>Thornton</td>
-                                                <td>@fat</td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row">3</th>
-                                                <td>Larry</td>
-                                                <td>the Bird</td>
-                                                <td>@twitter</td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row"></th>
-                                                <td> <b> Total Amount </b> </td>
-                                                <td>  </td>
-                                                <td></td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div th:replace="/fragments :: savingTransaction"> Saving transaction model </div>
 
                     <!-- Loan Transaction Model -->
-                    <div class="modal fade" id="loanTransactionModal" tabindex="-1" role="dialog" aria-labelledby="loanTransactionModalLabel" aria-hidden="true">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="loanTransactionModalLabel"> Loan Transaction Logs </h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                        <span aria-hidden="true">&times;</span>
-                                    </button>
-                                </div>
-                                <div class="modal-body">
-                                    <table class="table">
-                                        <thead class="thead-dark">
-                                            <tr>
-                                                <th scope="col"> Time </th>
-                                                <th scope="col"> Date </th>
-                                                <th scope="col"> Amount </th>
-                                                <th scope="col"> Reason </th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <th scope="row">1</th>
-                                                <td>Mark</td>
-                                                <td>Otto</td>
-                                                <td>@mdo</td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row">2</th>
-                                                <td>Jacob</td>
-                                                <td>Thornton</td>
-                                                <td>@fat</td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row">3</th>
-                                                <td>Larry</td>
-                                                <td>the Bird</td>
-                                                <td>@twitter</td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row"></th>
-                                                <td> <b> Total Amount </b> </td>
-                                                <td>  </td>
-                                                <td></td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div th:replace="/fragments :: loanTransaction"> Loan model </div>
 
                 </div>
             </div>
         </div>
+
+        <!-- Footer -->
+        <nav th:replace="/fragments :: footer"></nav>
 
     </body>
 </html>
