--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -14,8 +14,16 @@
         <!-- header -->
         <nav th:replace="/fragments :: mainHeader"> Main Header </nav>
 
+        <!-- Breadcrumbs -->
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page"> Register </li>
+            </ol>
+        </nav>
+
         <!-- Main Body -->
-        <div class="container" style="margin-top: 30px; margin-bottom: 30px;">
+        <div class="container" style="margin-bottom: 30px;">
             <div class="row">
                 <div class="col-sm-12 col-md-10 col-lg-5 mx-auto">
                     <div class="card card-signin my-5">
@@ -38,7 +46,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="id"> Id Number </label>
-                                    <input type="text" class="form-control" id="id" placeholder="Phone Number">
+                                    <input type="text" class="form-control" id="id" placeholder="Id Number">
                                 </div>
                                 <div class="form-group">
                                     <label for="phone"> Phone Number </label>
@@ -55,7 +63,7 @@
                                     </div>
                                 </div>
                                 <button type="submit" class="btn btn-primary">Sign Up</button>
-                                
+
                                 <p style="margin-top: 20px;"> Already a member? <a th:href="@{/login}"> Login </a> </p>
                             </form>
                         </div>
