--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
 
         <!-- header -->
         <nav th:replace="/fragments :: mainHeader"> Main Header </nav>
-        
+
         <!-- Breadcrumbs -->
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
@@ -29,20 +29,34 @@
                 <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
                     <div class="card card-signin my-5">
                         <div class="card-body">
+
+                            <div class="alert alert-success" th:if="${success}">
+                                <p class="text text-center">Registration successful!! Please
+                                    Sign in to continue</p>
+                            </div>
+                            <div class="alert alert-danger" th:if="${param.error}">
+                                <p class="text text-center">You entered the wrong credentials!! Please
+                                    try again or register</p>
+                            </div>
+                            <div class="alert alert-danger" th:if="${param.logout}">
+                                <p class="text text-center">You have been logged out!! Please
+                                    login to continue</p>
+                            </div>
+
                             <h5 class="card-title text-center">Sign In</h5>
-                            <form class="form-signin">
+                            <form class="form-signin"  th:action="@{/login}" method="post">
                                 <div class="form-label-group" style="margin-bottom: 20px;">
-                                    <label for="inputEmail">Email address</label>
-                                    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                                    <label for="idNumber"> Id Number </label>
+                                    <input type="text" id="idNumber" name="idNumber" class="form-control" placeholder="Id Number" required autofocus />
                                 </div>
 
                                 <div class="form-label-group"  style="margin-bottom: 20px;">
-                                    <label for="inputPassword">Password</label>
-                                    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                                    <label for="password">Password</label>
+                                    <input type="password" id="password" name="password" class="form-control" placeholder="Password" required  />
                                 </div>
 
                                 <div class="custom-control custom-checkbox mb-3">
-                                    <input type="checkbox" class="custom-control-input" id="customCheck1">
+                                    <input type="checkbox" class="custom-control-input" id="customCheck1" />
                                     <label class="custom-control-label" for="customCheck1">Remember password</label>
                                 </div>
                                 <button class="btn btn-lg btn-primary btn-block" type="submit"> Login </button>
