updating login and registration

--- a/src/main/resources/templates/agentHome.html
+++ b/src/main/resources/templates/agentHome.html
@@ -15,6 +15,13 @@
         <!-- Header -->
         <nav th:replace="/fragments :: header"></nav>
 
+        <!-- Breadcrumb -->
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item active" aria-current="page"> Agent Home </li>
+            </ol>
+        </nav>
+
         <!-- Container -->
 
         <div class="container" style="margin-top: 30px;">
