--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -38,7 +38,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="header">
             <a class="navbar-brand" th:href="@{/agentHome}"> E-money </a>
 
-            <a th:href="@{/logout}" class="btn btn-secondary"> Logout </a>
+            <a class="btn btn-secondary"> Logout </a>
         </nav>
 
         <!-- Saving Model -->
