--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" 
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
-    <head><script th:src="@{/webjars/jquery/3.4.1/jquery.min.js}"></script>
-        <script th:src="@{/webjars/bootstrap/4.4.1/js/bootstrap.min.js}"></script>
-        <title> E-money </title>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet"
-              th:href="@{/webjars/bootstrap/4.4.1/css/bootstrap.min.css}" />
+    
+    <head th:replace="/fragments:: head">
+              
     </head>
+    
     <body>
-
+        
         <!-- Header -->
         <nav th:replace="/fragments :: header"></nav>
+
+        <!-- Breadcrumbs -->
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a th:href="@{/agentHome}">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page"> Users </li>
+            </ol>
+        </nav>
 
         <!-- Mainbody -->
         <div class="container" style="margin: 30px;">
